--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -43,7 +43,7 @@
             <section class="cvvvv">
 
                 <article>
-                    <img src ="/images/CVBlack.png" alt="CV Black">
+                    <img src ="<%= cv.logo %>" alt="CV">
 
                     <div class="titulo-cvvvv">
                         <h2><%= cv.nombre %></h2>
@@ -76,7 +76,17 @@
 
             </section>
             <section class="all-cv">
-                <p>hola</p>
+                <div class="estilos">
+                    <img src="<%= cv.estilos[0] %>" alt="">
+                    <img src="<%= cv.estilos[1] %>" alt="">
+                    <img src="<%= cv.estilos[2] %>" alt="">
+                    <img src="<%= cv.estilos[3] %>" alt="">
+                    <img src="<%= cv.estilos[4] %>" alt="">
+                    <img src="<%= cv.estilos[5] %>" alt="">
+                    <img src="<%= cv.estilos[6] %>" alt="">
+                    <img src="<%= cv.estilos[7] %>" alt="">
+                    <img src="<%= cv.estilos[8] %>" alt="">
+                </div>
             </section>
         </div>
     
