--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,7 @@ main div section.all-cv{
     display: flex;
     width: 60%;
     background-color: white;
+    border: #490b88 2px solid;
 }
 
 main .box-padreee {
@@ -99,13 +100,33 @@ main .box-padreee {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    align-items: stretch;
     width: 90%;
-    margin: 0px auto;
+    margin: 5% auto;
 
 }
 
+main .all-cv .estilos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;  
+    padding: 1%;
+    
+}
 
+main .all-cv .estilos img{
+    width: 30%;
+    border: #d2d9ee 2px solid;
+    margin: 1% 0%;
+}
+
+/*
+main .all-cv .estilos img:active {
+    position: relative;
+    z-index: 10;
+    width: 50%;
+    border: #530086;
+}
+*/
 
 
 
@@ -117,6 +138,7 @@ body main section.cvvvv {
     border-radius: 10px;
     box-shadow: 0px 0px 10px #aa95bf;
     width: 30%;
+    height: 100%;
 }
 
 body main section.cvvvv:hover{
