--- a/src/views/creatucv.ejs
+++ b/src/views/creatucv.ejs
@@ -1,40 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Azuletta</title>
-</head>
+<%- include("./partials/head.ejs") %> 
 <body>
-    <header>
-        <section class="header-bar">
-            <div class="logo-name">
-                <img src="/images/azuletta_logo_header.png" alt="logo">
-                <h3>AZULETTA</h3>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href = "/" >Home</a></li>
-                    <li><a href = "/creatucv" >Crea tu CV</a></li>
-                    <li><a href = "/sobrenosotros" >Sobre Nosotros</a></li>
-                    <li><a href = "/contacto" >Contacto</a></li>
-                </ul>
-                <br>
-                <div class="buttons-nav">
-                    <button><a href = "/login" >Ingresar</a></button>
-                    <button><a href = "/registrarse" >Registarse</a></button>
-                </div>   
-            </nav>
-            <div class="burger">
-                <i class="fas fa-bars burger-bars"></i>
-            </div>
-        </section>
 
-    </header>
+    <%- include("./partials/header.ejs") %>
+    
     <main>
         <div class="titulo-packfav">
             <h2>SELECCIONA TU PACK FAVORITO</h2>
@@ -151,19 +121,7 @@
 
     </main>
 
-    <footer>
-        <div class="section-redes">
-            <p>REDES</p>
-            <div class="redes-img">
-                <img src="/images/tw.png" alt="">
-                <img src="/images/insta.png" alt="">
-                <img src="/images/linkedin.png" alt="">
-                <img src="/images/facebook.png" alt="">
-                <img src="/images/reddir.png" alt="">
-
-            </div>
-        </div>
-    </footer>
+    <%- include("./partials/footer.ejs") %> 
 
 </body>
 </html>
