--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,7 +191,9 @@ main section.cvvvv img {
 }
 
 section.cvvvv div ul{
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-decoration: none;
     list-style-type: none;
     padding: 0%;
@@ -207,9 +209,12 @@ section.cvvvv div ul li{
 
 section.cvvvv div ul li.back-funcion{
 
-    background-color: #d3d1d8;
-    border: 1px solid #d3d1d8;
+    background-color: #dcdae2;
+    border: 1px solid #dcdae2;
     border-radius: 2px;
+    margin: 5px 0px;
+    width: 90%;
+    padding: 10px 3px;
 }
 
 /* Product Create*/
@@ -617,7 +622,7 @@ main .titulo-packfav h2{
 /* CV SILVER*/
 
 
-body main section.silver {
+body main article.silver {
 
     text-align: center;
     background-color: white;
@@ -626,12 +631,12 @@ body main section.silver {
     box-shadow: 0px 0px 10px #aa95bf;
 }
 
-body main section.silver:hover{
+body main article.silver:hover{
 
     border:3px solid #490b88;
 }
 
-body main section.silver div.titulo-silver {
+body main article.silver div.titulo-silver {
 
     font-size:15px ;
     text-align: center;
@@ -641,7 +646,7 @@ body main section.silver div.titulo-silver {
     
 }
 
-body main section.silver div.description-silver {
+body main article.silver div.description-silver {
 
     color:#755497;
     margin: auto;
@@ -650,7 +655,7 @@ body main section.silver div.description-silver {
 
 }
 
-body main section.silver div.price-silver {
+body main article.silver div.price-silver {
 
     font-size: 25px;
     color:#0a2342;
@@ -659,7 +664,7 @@ body main section.silver div.price-silver {
     font-weight: bold;
 }
 
-body main section.silver div.bottom-silver input {
+body main article.silver div.bottom-silver input {
 
     background-color: #490b88;
     color: white;
@@ -672,13 +677,13 @@ body main section.silver div.bottom-silver input {
 
 }
 
-main section.silver img{
+main article.silver img{
 
     width: 50%;
     margin: 0px auto;
 }
 
-section.silver div ul{
+article.silver div ul{
 
     text-decoration: none;
     list-style-type: none;
@@ -686,193 +691,25 @@ section.silver div ul{
     margin: 20px 0px;
 }
 
-section.silver div ul li{
 
-    width: 80%;
-    margin: 0px auto;
-    padding: 10px;
-}
+article.silver div ul li.back-funcion{
 
-section.silver div ul li.back-funcion{
-
-    background-color: #d3d1d8;
-    border: 1px solid #d3d1d8;
+    background-color: #dcdae2;
+    border: 1px solid #dcdae2;
     border-radius: 2px;
+    margin: 5px 0px;
+    width: 90%;
+    padding: 10px 3px;
 
 }
 
-/* CV GOLD */
-
-body main section.gold {
-    
-    text-align: center;
-    background-color: white;
-    border: 3px solid white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #aa95bf;
+article.silver div ul.funciones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-body main section.gold:hover{
-    border:3px solid #490b88;
-}
 
-body main section.gold div.titulo-gold
-    {
-
-    font-size:15px ;
-    text-align: center;
-    font-style: bold;
-    color:#490b88;
-    margin: 0px auto;
-        
-}
-
-body main section.gold div.description-gold
-    {
-
-    color:#755497;
-    margin: auto;
-    width: 80%;
-    font-weight: bold;
-    
-}
-
-body main section.gold div.price-gold
-    {
-
-    font-size: 25px;
-    color:#0a2342;
-    margin: 5px auto;
-    margin-top: 10px;
-    font-weight: bold;
-
-}
-
-body main section.gold div.bottom-gold input
-
-{
-background-color: #490b88;
-color: white;
-border:#490b88;
-border-radius: 15px;
-margin-top: 10px;
-width: 45%;
-margin: 10px auto;
-padding: 10px;
-
-}
-
-main section.gold img{
-    width: 50%;
-    margin: 0px auto;
-}
-
-section.gold div ul{
-    text-decoration: none;
-    list-style-type: none;
-    padding: 0%;
-    margin: 20px 0px;
-}
-
-section.gold div ul li{
-
-    width: 80%;
-    margin: 0px auto;
-    padding: 10px;
-}
-
-section.gold div ul li.back-funcion{
-
-    background-color: #d3d1d8;
-    border: 1px solid #d3d1d8;
-    border-radius: 2px;
-
-}
-
-/* CV BLACK */
-
-body main section.black {
-
-    text-align: center;
-    background-color: white;
-    border: 3px solid white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #aa95bf;
-}
-
-body main section.black:hover{
-    border:3px solid #490b88;
-}
-
-body main section.black div.titulo-black {
-
-    font-size:15px ;
-    text-align: center;
-    font-style: bold;
-    color:#490b88;
-    margin: 0px auto;
-        
-    
-}
-
-body main section.black div.description-black {
-    
-    color:#755497;
-    margin: auto;
-    width: 80%;
-    font-weight: bold;
-
-}
-
-body main section.black div.price-black {
-
-    font-size: 25px;
-    color:#0a2342;
-    margin: 5px auto;
-    margin-top: 10px;
-    font-weight: bold;  
-
-}
-
-body main section.black div.bottom-black input {
-
-    background-color: #490b88;
-    color: white;
-    border:#490b88;
-    border-radius: 15px;
-    margin-top: 10px;
-    width: 45%;
-    margin: 10px auto;
-    padding: 10px;
-}
-
-main section.black img {
-
-    width: 50%;
-    margin: 0px auto;
-}
-
-section.black div ul{
-
-    text-decoration: none;
-    list-style-type: none;
-    padding: 0%;
-    margin: 20px 0px;
-}
-
-section.black div ul li{
-
-    margin: 0px auto;
-    padding: 10px;
-    width: 80%;
-}
-
-section.black div ul li.back-funcion{
-
-    background-color: #d3d1d8;
-    border: 1px solid #d3d1d8;
-    border-radius: 2px;
-}
 
 /* CARRITO */
 
@@ -1365,7 +1202,14 @@ footer div.redes-img img{
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        }
+    }
+
+    .box-padre section.packs{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
 
     main .box-padre .silver, .gold, .black {
         width: 70%;
@@ -1528,23 +1372,17 @@ footer div.redes-img img{
 
     }
 
-    .box-padre section.silver {
-
-        width: 60%;
-        margin: 3% 0%;
-
+    .box-padre section.packs{
+        display: flex;
+        flex-direction: row ;
+        justify-content: space-around;
+        align-items: stretch;
     }
 
-    .box-padre section.gold {
+    .box-padre article.silver {
 
-        width: 60%;
-        margin: 3% 0%;
-    }
+        width: 30%; 
 
-    .box-padre section.black {
-
-        width: 60%;
-        margin: 3% 0%;
     }
 
 
@@ -1965,26 +1803,18 @@ footer div.redes-img img{
 
     }
 
-    .box-padre section.silver {
+    .box-padre section.packs{
+        display: flex;
+        flex-direction: row ;
+        justify-content: space-around;
+    }
+
+    .box-padre article.silver {
 
         width: 30%;
         padding: 10px 0px;
     }
 
-    .box-padre section.gold {
-
-        width: 30%;
-        padding: 10px 0px;
-
-    
-    }
-
-    .box-padre section.black {
-
-        width: 30%;
-        padding: 10px 0px;
-
-    }
 
     /* CONTACTO */
 
@@ -2073,7 +1903,7 @@ footer div.redes-img img{
     }
 
     
-    .box-padre section.silver {
+    .box-padre article.silver {
     
         width: 30%;
 
