--- a/src/views/creatucv.ejs
+++ b/src/views/creatucv.ejs
@@ -5,7 +5,7 @@
 
     <%- include("./partials/header.ejs") %>
     
-    <main>
+    <main class="crea-tu-cv">
         <div class="titulo-packfav">
             <h2>SELECCIONA TU PACK FAVORITO</h2>
         </div>
@@ -42,6 +42,9 @@
 
                 <% }); %> 
             </section>
+        </div>
+        <div class="button-plantilla">
+            <a href="/product/details/1"><button>VER PLANTILLAS</button></a>
         </div>
 
     </main>
