Crear producto finalizado

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -717,8 +717,8 @@ div.button-plantilla button{
     border: #473383;
     border-radius: 15px;
     padding: 10px 20px;
+    margin-top: 15px;
     color: white;
-    margin-bottom: 50px;
 }
 
 
