--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -17,7 +17,7 @@
                 <p>¿No tienes curriculum? ¿No sabes qué poner o cómo hacerlo? No te preocupes, nosotros te ayudamos. 
                 ¡Vas a conseguir el trabajo de tus sueños!</p>
                 <div  class="boton">
-                    <button type="submit"><a href="/creatucv">CREA TU CV</a></button>
+                    <button type="submit"><a href="/product/creatucv">CREA TU CV</a></button>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
 
         <section class="section-5">
             <p>Prueba ahora el editor de CV online de Azuletta</p>
-            <button type="submit"><a href="/creatucv">DA EL PRIMER PASO</a></button>
+            <button type="submit"><a href="/product/creatucv">DA EL PRIMER PASO</a></button>
         </section>
 
     </section>
