--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,14 +8,14 @@
         <nav>
             <ul>
                 <li><a href = "/" >Home</a></li>
-                <li><a href = "/creatucv" >Crea tu CV</a></li>
+                <li><a href = "/product/creatucv" >Crea tu CV</a></li>
                 <li><a href = "/sobrenosotros" >Sobre Nosotros</a></li>
                 <li><a href = "/contacto" >Contacto</a></li>
             </ul>
             <br>
             <div class="buttons-nav">
-                <button><a href = "/login" >Ingresar</a></button>
-                <button><a href = "/registrarse" >Registarse</a></button>
+                <button><a href = "/user/login" >Ingresar</a></button>
+                <button><a href = "/user/registrarse" >Registarse</a></button>
             </div>   
         </nav>
         <div class="burger">
