--- a/src/views/product-edit.ejs
+++ b/src/views/product-edit.ejs
@@ -49,9 +49,9 @@
                 </div>
                 <div class="product-create-img">
                     <div>
-                        <label for="imagen">Imagen</label>
+                        <label for="logo">Logo</label>
                     </div>
-                    <input type="file" name="imagen" id="imagen " required>
+                    <input type="file" name="logo" id="logo ">
                 </div>
                 <div>
                     <button type="submit">Editar</button>
