--- a/src/views/product-edit.ejs
+++ b/src/views/product-edit.ejs
@@ -22,36 +22,36 @@
             <img src="/images/edit.png" alt="">
             <div class="product-create-right">
             <h1>Editar Producto</h1>
-            <form action="/product/create" method="POST" class="form-product-create">
+            <form action="/product/edit/<%= curriculum.id %>?_method=PUT" method="POST" class="form-product-create">
                 <div>
                     <div>
                         <label for="nombre">Nombre</label>
                     </div>
-                    <input type="text" name="nombre" id="nombre" required>
+                    <input type="text" value="<%= curriculum.nombre %>" name="nombre" id="nombre" required>
                 </div>
                 <div>
                     <div>
                         <label for="descripcion">Descripcion</label>
                     </div>
-                    <input type="text" name="descripcion" id="descripcion" required>
+                    <input type="text" value="<%= curriculum.descripcion %>" name="descripcion" id="descripcion" required>
                 </div>
                 <div>
                     <div>
                         <label for="precio">Precio</label>
                     </div>
-                    <input type="text" name="precio" id="precio" required>
+                    <input type="text" value="<%= curriculum.precio %>" name="precio" id="precio" required>
                 </div>
                 <div>
                     <div>
                         <label for="funciones">Funciones</label>
                     </div>
-                    <input type="text" name="funciones" id="funciones" required>
+                    <input type="text" value="<%= curriculum.funciones %>" name="funciones" id="funciones" required>
                 </div>
                 <div class="product-create-img">
                     <div>
                         <label for="logo">Logo</label>
                     </div>
-                    <input type="file" name="logo" id="logo ">
+                    <input type="file" value="<%= curriculum.logo %>" name="logo" id="logo ">
                 </div>
                 <div>
                     <button type="submit">Editar</button>
