--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -51,7 +51,7 @@
 
         </div>
         <div class="bottom-cvvvv">
-            <a href="/carrito"><input type="submit" name="add-to-cart" value="Agregar al carrito"></a>
+            <a href="/product/carrito"><input type="submit" name="add-to-cart" value="Agregar al carrito"></a>
         </div>
     
 
