--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -61,7 +61,7 @@
             </div>
             <div class="total-finalizar">
                 <p>Total: $$$$$</p>
-                <button type="submit">Finalizar Compra</button>
+                <a href="/"><button type="submit">Finalizar Compra</button></a>
             </div>
         </section>
     </main>
