--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -25,7 +25,7 @@
                 <input type="submit" value="Iniciar sesión">
 
                 <a href="#">¿Olvidaste tu contraseña?</a><br>
-                <a href="/registrarse">Registrate</a>
+                <a href="/user/registrarse">Registrate</a>
            </form>
         </div>
     
