--- a/src/views/product-edit.ejs
+++ b/src/views/product-edit.ejs
@@ -5,10 +5,14 @@
 
     <header>
 
-        <section class="header-bar">
-            <div class="logo-name">
-                <img src="/images/azuletta_logo_header.png" alt="logo">
+        <section class="header-bar-create">
+            <div class="logo-name-create">
+                <a href="/"><img src="/images/azuletta_logo_header.png" alt="logo"></a>
                 <h3>AZULETTA</h3>
+            </div>
+            <div class="user-box">
+                <i class="fas fa-user user-logo"></i>
+                <p>Usuario</p>
             </div>
             <div class="burger">
                 <i class="fas fa-bars burger-bars"></i>
