--- a/src/views/registrarse.ejs
+++ b/src/views/registrarse.ejs
@@ -35,7 +35,7 @@
 
            </form>
 
-            <a href="/login">Ya estás registrado?</a>
+            <a href="/user/login">Ya estás registrado?</a>
         </div>
     
     </main>
