--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,7 +234,7 @@ section.header-bar-create div.user-box p{
 .user-logo{
     color: #530086;
     font-size: 120%;
-    border: #b3b2b2 1px solid;
+    border: #530086 1px solid;
     border-radius: 10px;
     padding: 5px;
 }
